<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <ImageView
        android:id="@+id/iv_user"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/rmclogo" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_below="@id/iv_user"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_account_login"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/et_password"
        android:drawableLeft="@drawable/ic_password"
        android:hint="Password"
        android:background="#11000000"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:textColor="#000000"
        android:layout_alignLeft="@+id/et_email"
        android:layout_alignStart="@id/et_email"
        android:layout_below="@id/et_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_rectangle_cyan"
        android:text="Login"
        android:textColor="#ffffff"
        app:backgroundTint="@color/cyan" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:textColor="#000000"
        android:text="Register" />


</RelativeLayout>